--- a/package.json
+++ b/package.json
@@ -10,24 +10,21 @@
     "module": "dist/iterator-utils.mjs",
     "typings": "dist/iterator-utils.d.ts",
     "author": "jeffzo",
-    "repository": "https://github.com/SIGUSR97/iterator-utils",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/SIGUSR97/iterator-utils.git"
+    },
     "license": "MIT",
     "maintainers": [
-        {
-            "name": "jeffzo",
-            "email": "jeffzou2001@gmail.com"
-        },
-        {
-            "name": "sigkill",
-            "email": "jeffzo01@qq.com"
-        }
+        "jeffzo <jeffzou2001@gmail.com>",
+        "sigkill <jeffzo01@qq.com>"
     ],
     "devDependencies": {
         "@types/jest": "^26.0.22",
         "@types/node": "^14.14.37",
         "@typescript-eslint/eslint-plugin": "^4.20.0",
         "@typescript-eslint/parser": "^4.20.0",
-        "esbuild": "^0.11.2",
+        "esbuild": "^0.11.5",
         "eslint": "^7.23.0",
         "jest": "^26.6.3",
         "rollup": "^2.44.0",
@@ -36,5 +33,23 @@
         "ts-jest": "^26.5.4",
         "tslib": "^2.1.0",
         "typescript": "^4.2.3"
-    }
+    },
+    "bugs": {
+        "url": "https://github.com/SIGUSR97/iterator-utils/issues"
+    },
+    "homepage": "https://github.com/SIGUSR97/iterator-utils#readme",
+    "directories": {
+        "test": "test"
+    },
+    "dependencies": {
+        "eslint-scope": "^5.1.1",
+        "eslint-utils": "^2.1.0",
+        "eslint-visitor-keys": "^2.0.0",
+        "mime-types": "^2.1.30"
+    },
+    "keywords": [
+        "iterator",
+        "generator",
+        "functional programming"
+    ]
 }
