--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -15,6 +15,12 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 15
-      - run: npm ci
-      - run: npm test
-      - run: npm run build
+      - uses: actions/cache@v1
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-node${{ matrix.node-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+      - name: Install pnpm
+        run: curl -f https://get.pnpm.io/v6.js | node - add --global pnpm@6
+      - run: pnpm install
+      - run: pnpm test
+      - run: pnpm build
