--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
     "name": "@jeffzo/iterator-utils",
-    "version": "0.0.1",
     "description": "Iterator utility functions",
     "scripts": {
         "test": "jest",
@@ -22,25 +21,23 @@
     "devDependencies": {
         "@types/jest": "^26.0.22",
         "@types/node": "^14.14.37",
-        "@typescript-eslint/eslint-plugin": "^4.20.0",
-        "@typescript-eslint/parser": "^4.20.0",
+        "@typescript-eslint/eslint-plugin": "^4.21.0",
+        "@typescript-eslint/parser": "^4.21.0",
         "esbuild": "^0.11.5",
         "eslint": "^7.23.0",
+        "eslint-plugin-import": "^2.22.1",
         "jest": "^26.6.3",
         "rollup": "^2.44.0",
         "rollup-plugin-dts": "^3.0.1",
         "rollup-plugin-esbuild": "^3.0.2",
         "ts-jest": "^26.5.4",
-        "tslib": "^2.1.0",
+        "tslib": "^2.2.0",
         "typescript": "^4.2.3"
     },
     "bugs": {
         "url": "https://github.com/SIGUSR97/iterator-utils/issues"
     },
     "homepage": "https://github.com/SIGUSR97/iterator-utils#readme",
-    "directories": {
-        "test": "test"
-    },
     "dependencies": {
         "eslint-scope": "^5.1.1",
         "eslint-utils": "^2.1.0",
