--- a/package.json
+++ b/package.json
@@ -32,18 +32,16 @@
         "rollup-plugin-esbuild": "^3.0.2",
         "ts-jest": "^26.5.4",
         "tslib": "^2.2.0",
-        "typescript": "^4.2.3"
-    },
-    "bugs": {
-        "url": "https://github.com/SIGUSR97/iterator-utils/issues"
-    },
-    "homepage": "https://github.com/SIGUSR97/iterator-utils#readme",
-    "dependencies": {
+        "typescript": "^4.2.3",
         "eslint-scope": "^5.1.1",
         "eslint-utils": "^2.1.0",
         "eslint-visitor-keys": "^2.0.0",
         "mime-types": "^2.1.30"
     },
+    "bugs": {
+        "url": "https://github.com/SIGUSR97/iterator-utils/issues"
+    },
+    "homepage": "https://github.com/SIGUSR97/iterator-utils#readme",
     "keywords": [
         "iterator",
         "generator",
